# agenic_pm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  skills-lock.json
.claude/: ralph-loop.local.md
backend/: .coverage  AGENTS.md  pyproject.toml
backend/.claude/: ralph-loop.local.md
backend/app/: ai_schema.py  db.py  deps.py  main.py  openrouter.py  schemas.py
backend/app/routers/: activity.py  admin.py  ai.py  auth.py  boards.py  cards.py  checklists.py  columns.py  comments.py  dependencies.py  export.py  notifications.py  registration.py  sprints.py  stats.py  time_logs.py  users.py
backend/data/: pm.db
backend/static/: index.html
backend/tests/: test_ai_schema.py  test_app.py  test_db.py  test_openrouter.py  test_units.py
docs/: AI_OUTPUT_SCHEMA.md  DATABASE_SCHEMA.md  PLAN.md  USING_CONTEXT7_MCP.md  USING_POLYGON.md  USING_SKILLS.md  code_review.md  review.md
frontend/: AGENTS.md  vitest.config.ts
frontend/src/app/: globals.css  layout.test.tsx  layout.tsx  page.test.tsx  page.tsx
frontend/src/app/admin/: page.test.tsx  page.tsx
frontend/src/components/: ErrorBoundary.test.tsx  ErrorBoundary.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.test.tsx  KanbanColumn.tsx  KeyboardShortcutsOverlay.tsx  NewCardForm.tsx
frontend/src/lib/: kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
